fix width scrollbar

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -9,7 +9,7 @@
 
 	&::-webkit-scrollbar
 	{
-		width: 4px;
+		width: 6px;
 		height: 4px;
 		background-color: transsparent;
 		border-radius: 100px;
